# us_eu_macroeconomy_comparator

./: .env  Cargo.toml  README.md
.github/workflows/: BACKUP_rust.yml  rust.yml
csv_data/: DEXUSEU.csv
outputs/csv/: result.csv
outputs/parquet/: result.parquet
src/: main.rs
src/datasets_config/: datasets_config.rs  mod.rs
src/extractor/: csv.rs  ecb.rs  extractor_manager.rs  fred.rs  mod.rs  sec.rs
src/loader/: csv.rs  graph.rs  loader_manager.rs  mod.rs  parquet.rs
src/model/: data_model.rs
src/tests/: mod.rs  test_helpers.rs
src/transformer/: mod.rs  normalize.rs
src/utils/: mod.rs
tests/test_files/: test_csv.csv
